--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,89 @@
-version: '3'
+version: '3.8'
 services:
-  neo4j:
-    image: neo4j:latest
-    container_name: neo4j
+  db:
+    image: postgres:latest
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U beyondmeet" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     environment:
-      - NEO4J_AUTH=neo4j/Aa123456
+      POSTGRES_DB: beyondmeet
+      POSTGRES_USER: beyondmeet
+      POSTGRES_PASSWORD: beyondmeet
     ports:
-      - "7474:7474" # HTTP
-      - "7687:7687" # Bolt
+      - "5432:5432"
     volumes:
-      - $PWD/neo4j/data:/data
-      - $PWD/neo4j/logs:/logs
-      - $PWD/neo4j/import:/var/lib/neo4j/import
-      - $PWD/neo4j/plugins:/plugins
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - beyondmeet-network
 
-  app:
-    build: .
-    container_name: python_app
-    environment:
-      - NEO4J_URI=bolt://neo4j:7687
-      - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=Aa123456
+  redis:
+    image: redis:latest
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "6379:6379"
     volumes:
-      - $PWD:/usr/src/app
+      - redis_data:/data
+    networks:
+      - beyondmeet-network
+
+  python_backend:
+    build: ./backend
+    container_name: python_backend
+    environment:
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - DATABASE_URL=postgresql://beyondmeet:beyondmeet@db:5432/beyondmeet
+    env_file:
+      - ./.env
+    volumes:
+      - ./backend:/usr/src/app
+      - ./backend/credentials.json:/usr/src/app/credentials.json
+    ports:
+      - "8000:8000"
     depends_on:
-      - neo4j
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - beyondmeet-network
+    hostname: backend
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8000
+    env_file:
+      - ./frontend/.env.local
+      - ./.env
+    depends_on:
+      - python_backend
+    networks:
+      - beyondmeet-network
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+
+networks:
+  beyondmeet-network:
+    driver: bridge
+
+volumes:
+  postgres_data:
+  redis_data:
